--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="/assets/svg/LOGO VERMELHO E PRETA.svg" alt="logo"></a>
+        <a href="index.html"><img class="logo" src="./assets/svg/LOGO VERMELHO E PRETA.svg" alt="logo"></a>
         <h1><a href="index.html" style="text-decoration: none; color: rgb(216, 10, 10);">SHOP</a></h1>
-        <img class="rabbit" src="/assets/img/cueioldkpop.png" alt="">
+        <img class="rabbit" src="./assets/img/cueioldkpop.png" alt="">
     </header>
     <div class="slide">
         <div class="head2">
             <ul>
-                <li><a href="/index.html">Início</a></li>
+                <li><a href="./index.html">Início</a></li>
                 <li><a href="">Sobre Nós</a></li>
                 <li><a href="https://x.com/leaodokpop">Página no X (Twitter)</a></li>
             </ul>
@@ -31,19 +31,19 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-50" src="/assets/img/slide/AMOSTRA-3D.jpg" alt="First slide">
+                <img class="d-block w-50" src="./assets/img/slide/AMOSTRA-3D.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-50" src="/assets/img/slide/AMOSTRA 3D 2.jpg" alt="Second slide">
+                <img class="d-block w-50" src="./assets/img/slide/AMOSTRA 3D 2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-50" src="/assets/img/slide/AMOSTRA 3.png" alt="Third slide">
+                <img class="d-block w-50" src="./assets/img/slide/AMOSTRA 3.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-50" src="/assets/img/slide/AMOSTRA 4.png" alt="Third slide">
+                <img class="d-block w-50" src="./assets/img/slide/AMOSTRA 4.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-50" src="/assets/img/slide/AMOSTRA 5.png" alt="Third slide">
+                <img class="d-block w-50" src="./assets/img/slide/AMOSTRA 5.png" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -62,7 +62,7 @@
    <div class="products">
     <div class="row">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/assets/img/slide/AMOSTRA-3D.jpg" alt="Card image cap">
+        <img class="card-img-top" src="./assets/img/slide/AMOSTRA-3D.jpg" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/assets/img/slide/AMOSTRA 3D 2.jpg" alt="Card image cap">
+        <img class="card-img-top" src="./assets/img/slide/AMOSTRA 3D 2.jpg" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/assets/img/slide/AMOSTRA-3D.jpg" alt="Card image cap">
+        <img class="card-img-top" src="./assets/img/slide/AMOSTRA-3D.jpg" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
@@ -87,7 +87,7 @@
       </div>
       <div class="w-100"></div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/assets/img/slide/AMOSTRA 3.png" alt="Card image cap">
+        <img class="card-img-top" src="./assets/img/slide/AMOSTRA 3.png" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/assets/img/slide/AMOSTRA 4.png" alt="Card image cap">
+        <img class="card-img-top" src="./assets/img/slide/AMOSTRA 4.png" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
@@ -103,7 +103,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/assets/img/slide/AMOSTRA 5.png" alt="Card image cap">
+        <img class="card-img-top" src="./assets/img/slide/AMOSTRA 5.png" alt="Card image cap">
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
