--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
         <h1><a href="index.html" style="text-decoration: none; color: rgb(216, 10, 10);">SHOP</a></h1>
         <img class="rabbit" src="./assets/img/cueioldkpop.png" alt="">
     </header>
+    <div class="head2">
+      <ul>
+          <li><a href="./index.html">Início</a></li>
+          <li><a href="">Sobre Nós</a></li>
+          <li><a href="https://x.com/leaodokpop">Página no X (Twitter)</a></li>
+      </ul>
+    </div>
+    <div class="semi-footer">
+      <span>LOJA OFICIAL DO LEÃO DO KPOP</span>
+    </div>
     <div class="slide">
-        <div class="head2">
-            <ul>
-                <li><a href="./index.html">Início</a></li>
-                <li><a href="">Sobre Nós</a></li>
-                <li><a href="https://x.com/leaodokpop">Página no X (Twitter)</a></li>
-            </ul>
-        </div>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -66,7 +69,7 @@
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -74,7 +77,7 @@
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -82,7 +85,7 @@
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
       <div class="w-100"></div>
@@ -91,7 +94,7 @@
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -99,7 +102,7 @@
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
@@ -107,7 +110,7 @@
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
     </div>
