add page product

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="card-body">
           <h1 class="card-title">Card title</h1>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac pellentesque justo, et porta ante. Mauris sit amet nisi eget ex congue ultrices. Nulla eleifend ipsum sit amet nisi gravida, vel efficitur ante vehicula.</p>
-          <a href="#" class="btn btn-primary">Comprar</a>
+          <a href="./src/pages/produtoAmostra1.html" class="btn btn-primary">Comprar</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
