--- a/src/pages/products/produtoAmostra1.html
+++ b/src/pages/products/produtoAmostra1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="shortcut icon" href="/assets/svg/COELHO NEW JEANS SPORT.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../../styles/productPage.css">
 </head>
 <body>
     <header>
@@ -23,6 +24,9 @@
     </div>
     <div class="semi-footer">
       <span>LOJA OFICIAL DO LEÃO DO KPOP</span>
+    </div>
+    <div class="product">
+      a
     </div>
 </body>
 </html>
